--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -459,7 +459,7 @@
         "hourly": "Time",
         "daily": "Date",
         "monthly": "Month",
-        "unknown": "Sequence"
+        "unknown": "Date"
       },
       "columns": {
         "price": "Current price",
