fix: remove DocumentType references from MeteringPointProcess and related components and use correct mapping of businessReason

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -667,11 +667,14 @@
     "processOverview": {
       "columns": {
         "createdAt": "Beskedtidspunkt",
-        "documentType": "Type",
+        "reasonCode": "Type",
         "state": "Status",
         "cutoffDate": "Skæringsdato",
         "initiator": "Initierende aktør",
         "actions": "Mulige handlinger"
+      },
+      "reasonCode": {
+        "EndOfSupply": "Leveranceophør (BRS-002)"
       },
       "filters": {
         "created": "Tidspunkt",
