--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -662,6 +662,14 @@
         "owner": "Ejer",
         "amount": "Antal",
         "period": "Periode"
+      },
+      "details": {
+        "columns": {
+          "submittedAt": "Indsendt",
+          "description": "Beskrivelse"
+        },
+        "copyMessage": "Kopier besked-ID",
+        "navigateToMessage": "Gå til besked"
       }
     },
     "processOverview": {
