fix(dh): minor fix with translations

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -910,7 +910,7 @@
         "streetCode": "{{ meteringPoint.overview.shared.streetCode }}",
         "municipalityCode": "{{ meteringPoint.overview.shared.municipalityCode }}",
         "darID": "{{ meteringPoint.overview.shared.darID }}",
-        "comment": "Målepunktsbemærkninger"
+        "commentLabel": "Målepunktsbemærkninger"
       },
       "powerPlant": {
         "title": "Anlæg",
