--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -909,7 +909,7 @@
         "streetCode": "{{ meteringPoint.overview.shared.streetCode }}",
         "municipalityCode": "{{ meteringPoint.overview.shared.municipalityCode }}",
         "darID": "{{ meteringPoint.overview.shared.darID }}",
-        "comment": "Comment"
+        "commentLabel": "Comment"
       },
       "powerPlant": {
         "title": "Power plant",
