--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -663,6 +663,7 @@
         "amount": "Antal",
         "period": "Periode"
       },
+      "chargeType": "Type",
       "details": {
         "columns": {
           "submittedAt": "Indsendt",
