--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -662,6 +662,7 @@
         "amount": "Amount",
         "period": "Period"
       },
+      "chargeType": "Type",
       "details": {
         "columns": {
           "submittedAt": "Submitted",
