--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -506,7 +506,7 @@
       "processes": {
         "tabLabel": "Processes"
       },
-      "chargelxinks": {
+      "chargelinks": {
         "tabLabel": "Charge links"
       },
       "messages": {
