Split charge links into tariff-subscriptions and fees (#4947)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Bjørn Hoffmann <ManBearTM@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -507,8 +507,8 @@
       "processes": {
         "tabLabel": "Procesoverblik"
       },
-      "prices": {
-        "tabLabel": "Priser"
+      "chargelinks": {
+        "tabLabel": "Pristilknytninger"
       },
       "messages": {
         "tabLabel": "Beskeder"
@@ -662,7 +662,12 @@
         "name": "Navn",
         "owner": "Ejer",
         "amount": "Antal",
-        "period": "Periode"
+        "period": "Periode",
+        "date": "Dato"
+      },
+      "navigation": {
+        "tariffAndSubscription": "Tarif og abonnement",
+        "fees": "Gebyr"
       },
       "chargeType": "Type",
       "details": {
