--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -689,7 +689,11 @@
         "FAS_CANCEL_WORKFLOW": "Net og el kan annullere workflow"
       },
       "steps": {
-        "REQUEST_END_OF_SUPPLY": "Anmod om leveranceophør (BRS-005)"
+        "RSM005_REQUEST": "Anmod om leveranceophør (RSM-005)",
+        "RSM005_CONFIRM": "Godkend anmod om leveranceophør (RSM-005)",
+        "RSM005_REJECT": "Afvis anmod om leveranceophør (RSM-005)",
+        "RSM020_REQUEST": "Anmodning om afbrydelse (RSM-020)",
+        "UNKNOWN": "Ukendt trin"
       },
       "details": {
         "list": {
@@ -700,7 +704,7 @@
         },
         "columns": {
           "step": "Trin",
-          "createdAt": "Beskedtidspkt.",
+          "completedAt": "Fuldført",
           "dueDate": "Forfaldsdato",
           "actor": "Aktør",
           "state": "Status"
