--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -818,7 +818,7 @@
         }
       }
     },
-    "attachPrice": {
+    "createChargeLink": {
       "title": "Tilknyt pris",
       "close": "Luk",
       "back": "Tilbage",
