--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -817,7 +817,7 @@
         }
       }
     },
-    "attachPrice": {
+    "createChargeLink": {
       "title": "Attach price",
       "close": "Close",
       "back": "Back",
