--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -581,7 +581,7 @@
         "actionsButton": "Handlinger",
         "upload": "Upload måledata",
         "moveIn": "Tilflyt kunde",
-        "attachPrice": "Tilknyt pris"
+        "createChargeLink": "Tilknyt pris"
       },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
