--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -580,7 +580,7 @@
         "actionsButton": "Actions",
         "upload": "Upload measurements",
         "moveIn": "Customer move-in",
-        "attachPrice": "Attach price"
+        "createChargeLink": "Attach price"
       },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
