Added stop charge link modal

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -688,6 +688,12 @@
         "startDate": "Skæringsdato",
         "save": "Gem ændringer",
         "close": "Luk"
+      },
+      "stop": {
+        "title": "Stop pristilknytning",
+        "stopDate": "Stopdato",
+        "save": "Gem ændringer",
+        "close": "Luk"
       }
     },
     "processOverview": {
