Modal to cancel charge link

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -688,6 +688,12 @@
         "startDate": "Skæringsdato",
         "save": "Gem ændringer",
         "close": "Luk"
+      },
+      "cancel": {
+        "title": "Annuller pristilknytning?",
+        "cancelWarning": "Handlingen kan ikke fortrydes",
+        "cancel": "Annuller pristilknytning",
+        "close": "Luk"
       }
     },
     "processOverview": {
