--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -385,6 +385,7 @@
     "charges": {
       "topBarTitle": "Priser",
       "table": {
+        "createButton": "Opret pris",
         "columns": {
           "code": "ID",
           "type": "Type",
