Add support for selecting type in modal

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -424,7 +424,8 @@
       "action": {
         "SUBSCRIPTION": "Opret abonnement",
         "FEE": "Opret gebyr",
-        "TARIFF": "Opret tarif"
+        "TARIFF": "Opret tarif",
+        "SELECTION": "Opret pris"
       },
       "close": "Luk",
       "form": {
