Feature/UI to cancel change (#4981)

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -689,6 +689,12 @@
         "save": "Gem ændringer",
         "close": "Luk"
       },
+      "cancel": {
+        "title": "Annuller pristilknytning?",
+        "cancelWarning": "Handlingen kan ikke fortrydes",
+        "cancel": "Annuller pristilknytning",
+        "close": "Luk"
+      },
       "stop": {
         "title": "Stop pristilknytning",
         "stopDate": "Stopdato",
