--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -688,6 +688,12 @@
         "save": "Save changes",
         "close": "Close"
       },
+      "cancel": {
+        "title": "Cancel price link?",
+        "cancelWarning": "This action cannot be undone",
+        "cancel": "Cancel price link",
+        "close": "Close"
+      },
       "stop": {
         "title": "Stop price link",
         "stopDate": "Stop date",
