feat(metering-point, upload-measurements): suport overriding resolution (#4985)
Co-authored-by: Alexander Hafstad <alexander@hafstad.dk>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -358,7 +358,9 @@
     "P1D": "Pr. dag",
     "P1M": "Pr. måned",
     "P1Y": "Pr. år",
-    "ANDET": "Andet"
+    "QUARTER_HOURLY": "Kvarter",
+    "HOURLY": "Time",
+    "MONTHLY": "Pr. måned"
   },
   "netSettlementGroup": {
     "2": "Timebaseret afregning (2)",
@@ -859,6 +861,7 @@
         "file": "Filnavn",
         "datepicker": "Start driftsdøgn",
         "datepickerHint": "Tidspunktet vil automatisk blive overført til UTC-tid.",
+        "resolutionHint": "Upload ny måledata for at ændre tidsopløsning.",
         "table": {
           "positionCount": "Antal af positioner",
           "sum": "Sum"
