--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -486,7 +486,7 @@
       }
     },
     "series": {
-      "showHistory": "Vis historik",
+      "showHistory": "Historik",
       "resolution": {
         "quarterhourly": "Tidspunkt",
         "hourly": "Tidspunkt",
