--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -485,7 +485,7 @@
       }
     },
     "series": {
-      "showHistory": "Show history",
+      "showHistory": "History",
       "resolution": {
         "quarterhourly": "Time",
         "hourly": "Time",
