--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -697,6 +697,9 @@
         "period": "Period",
         "date": "Date"
       },
+      "tooltip": {
+        "transparentInvoicing": "Transparent invoicing"
+      },
       "navigation": {
         "tariffAndSubscription": "Tariff and subscription",
         "fees": "Fee"
