--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -698,6 +698,9 @@
         "period": "Periode",
         "date": "Dato"
       },
+      "tooltip": {
+        "transparentInvoicing": "Skal viderefaktures"
+      },
       "navigation": {
         "tariffAndSubscription": "Tarif og abonnement",
         "fees": "Gebyr"
